[ISSUE #1870] Add Support for Java 9+ and compatible to previous Java version (#2210)
* add jdk11 jvm option

* add jdk11 jvm option for server

* fix jdk11 jvm option for server

* [maven-release-plugin] prepare for next development iteration

* add support JVM Flag for Java version not less than 9 (including Java 9 - 14)

* add support JVM Flag for Java version not less than 9 (including Java 9 - 14) in windows env

* remove useless comment

Co-authored-by: zhanghaoxin-at-826767166263 <COk6iTbDdOqj/yq53u9n9vPTy+3pmZNcm4mKOhImudI=>
Co-authored-by: rongtongjin <794220751@qq.com>